@@ -1,6 +1,0 @@
-nts is an acronym for Note Taking Simplified. It provides a simple,
-intuitive format for using plain text files to store notes, a
-command line interface for viewing notes in a variety of convenient
-ways and a cross-platform, wx(python)-based GUI for creating and
-modifying notes as well as viewing them. Displayed items can be
-grouped by path or tag and can be filtered in various ways.
