@@ -1,24 +1,0 @@
-# $NetBSD: Makefile,v 1.19 2022/06/30 11:18:20 nia Exp $
-
-DISTNAME=	nts-78
-PKGREVISION=	5
-CATEGORIES=	editors
-MASTER_SITES=	http://www.duke.edu/~dgraham/NTS/
-
-MAINTAINER=	ryoon@NetBSD.org
-HOMEPAGE=	http://www.duke.edu/~dgraham/NTS/
-COMMENT=	Simple GUI note taking application
-LICENSE=	gnu-gpl-v2
-
-DEPENDS+=	${PYPKGPREFIX}-dateutil-[0-9]*:../../time/py-dateutil
-DEPENDS+=	${PYPKGPREFIX}-wxWidgets>=2.8.7:../../x11/py-wxWidgets
-
-PYTHON_VERSIONS_ACCEPTED=	27 # py-wxWidgets
-
-USE_LANGUAGES=	# none
-
-PYDISTUTILSPKG=	yes
-
-.include "../../lang/python/application.mk"
-.include "../../lang/python/egg.mk"
-.include "../../mk/bsd.pkg.mk"
