@@ -1,32 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2011/07/11 07:00:42 ryoon Exp $
-bin/n.py
-bin/n.pyw
-${PYSITELIB}/ez_setup.py
-${PYSITELIB}/ez_setup.pyc
-${PYSITELIB}/ez_setup.pyo
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/nts/NTS.ico
-${PYSITELIB}/nts/NTS_128.png
-${PYSITELIB}/nts/NTS_256.png
-${PYSITELIB}/nts/NTS_32.png
-${PYSITELIB}/nts/__init__.py
-${PYSITELIB}/nts/__init__.pyc
-${PYSITELIB}/nts/__init__.pyo
-${PYSITELIB}/nts/ntsData.py
-${PYSITELIB}/nts/ntsData.pyc
-${PYSITELIB}/nts/ntsData.pyo
-${PYSITELIB}/nts/ntsDocs.py
-${PYSITELIB}/nts/ntsDocs.pyc
-${PYSITELIB}/nts/ntsDocs.pyo
-${PYSITELIB}/nts/ntsRC.py
-${PYSITELIB}/nts/ntsRC.pyc
-${PYSITELIB}/nts/ntsRC.pyo
-${PYSITELIB}/nts/ntsVersion.py
-${PYSITELIB}/nts/ntsVersion.pyc
-${PYSITELIB}/nts/ntsVersion.pyo
-${PYSITELIB}/nts/ntsWX.py
-${PYSITELIB}/nts/ntsWX.pyc
-${PYSITELIB}/nts/ntsWX.pyo
