@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.4022 2023/06/26 11:52:07 wiz Exp $
+$NetBSD: CHANGES-2023,v 1.4023 2023/06/26 11:52:54 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -5589,3 +5589,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Removed cross/bossa [wiz 2023-06-26]
 	Removed devel/ExmanIDE [wiz 2023-06-26]
 	Removed devel/boa-constructor [wiz 2023-06-26]
+	Removed editors/nts [wiz 2023-06-26]
